# DYNAMIC

./: .gitignore  CMakeLists.txt  README.md  add_bench.cpp  avx_comp.cpp  benchmark.cpp  deb  deb.cpp  debug.cpp  exact_bench.cpp  run.sh  run_scaling.sh  runners.hpp  space_suc.cpp
include/dynamic/: dynamic.hpp
include/dynamic/algorithms/: rle_lz77_v1.hpp
include/dynamic/internal/: bufferedbv.hpp  bwt.hpp  packed_vector.hpp  succinct_bitvector.hpp
tests/: .gitignore  CMakeLists.txt  helpers.hpp  test.cpp
time/: generate.py
